landing layout ready, needing content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: landing
             <div id="parallax-scene" class="parallax-container">
                 <img class="layer" data-depth="0.75" src="/img/cover-back.svg"/>
                 <img class="layer" data-depth="1" src="/img/cover-middle.svg"/>
-                <img class="layer" data-depth="1.5" src="/img/cover-front-1.svg"/>
+                <img class="layer" data-depth="1.5" src="/img/cover-front.svg"/>
             </div>
         </section>
         <div class="clearfix"></div>
@@ -25,7 +25,7 @@ layout: landing
         <section id="presentation" class="presentation clearfix">
             <div class="presentation-rellax-scene">
                 <img class="rellax pres-quote-purple" data-rellax-speed="6" src="/img/quote-purple.svg"/>
-                <img class="rellax pres-hexagone-lightpurple" data-rellax-speed="2" src="/img/hexagone-lightpurple.svg"/>
+                <img class="rellax pres-hexagone-lightpurple" data-rellax-speed="2" src="/img/hexagone-light-purple.svg"/>
                 <img class="rellax pres-colon-lightgreen" data-rellax-speed="-4" src="/img/colon-lightgreen.svg"/>
                 <img class="rellax pres-bracket-lightblue" data-rellax-speed="10" src="/img/bracket-lightblue.svg"/>
             </div>
@@ -57,8 +57,8 @@ layout: landing
         <!-- Date Section -->
         <section id="dates" class="content clearfix">
             <div class="line-wrapper clearfix">
-                <div class="container clearfix">
-                    <div class="text-space clearfix"></div>
+                <div class="container">
+                    <div class="big-text-space"></div>
                     <h2>Meetups à venir</h2>
                 </div>
             </div>
@@ -66,12 +66,44 @@ layout: landing
 <code><span class="lightBlue">(</span><span class="blue">def</span> meetup
      <span class="purple">{</span><span class="lightPurple">:date</span> <span class="lightGreen">“june 29 2016”</span>
       <span class="lightPurple">:location</span> <span class="lightGreen">“41, rue Meslay - 75003”</span>
-      <span class="lightPurple">:participants</span> <span class="lightGreen">“Hiram Madeleine”</span>
-                    <span class="lightGreen">“Jérémie Grodziski”</span><span class="purple">}</span><span class="lightBlue">)</span></code>
+      <span class="lightPurple">:organizers</span> <span class="lightGreen">“Hiram Madeleine”</span>
+                  <span class="lightGreen">“Jérémie Grodziski”</span><span class="purple">}</span><span class="lightBlue">)</span></code>
             </pre>
             <div class="container clearfix">
                 <a class="meetup-link" href="#">voir sur meetup</a>
-                <div class="text-space"></div>
+                <div class="big-text-space"></div>
             </div>
         </section>
-        <hr />
+        <div class="divider small">
+            <img class="rellax" data-rellax-speed="8" src="/img/divide.svg"/>
+        </div>
+        <section id="team" class="content clearfix">
+            <div class="line-wrapper clearfix">
+                <div class="container space-after clearfix">
+                    <div class="big-text-space"></div>
+                    <h2>Organisateurs</h2>
+                    <div class="team-container clearfix">
+                        <div class="name">Hiram Madeleine</div>
+                        <div class="mail">
+                            <a href="mailto:hiram.madelaine@gmail.com">hiram.madelaine@gmail.com</a>
+                        </div>
+                        <div class="twitter">
+                            <a target="_blank" href="https://twitter.com/hirammadelaine">@hirammadeleine</a>
+                        </div>
+                    </div>
+                    <div class="team-container">
+                        <div class="avatar">
+                            <img src="/img/jeremie.png"/>
+                        </div>
+                        <div class="name">Jérémie Grodziski</div>
+                        <div class="mail">
+                            <a href="mailto:jeremie@grodziski.com">jeremie@grodziski.com</a>
+                        </div>
+                        <div class="twitter">
+                            <a target="_blank" href="https://twitter.com/jgrodziski">@jgrodziski</a>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </section>
