title, meetup link, some content

--- a/index.html
+++ b/index.html
@@ -34,18 +34,7 @@ layout: landing
                     <h1>Paris Clojure Meetup</h1>
                     <div class="text-space"></div>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        In porttitor feugiat tincidunt. Phasellus cursus aliquam
-                        pharetra. Cras malesuada, augue et volutpat dictum, tortor
-                        massa accumsan massa, accumsan tristique dolor purus eget
-                        sapien. Sed nunc magna, sollicitudin ut sapien in, blandit
-                        tincidunt mauris. Nunc malesuada nunc nisl, nec volutpat
-                        diam sollicitudin sit amet. Curabitur aliquet, felis non
-                        eleifend consectetur, dolor velit tincidunt nulla, quis
-                        ultrices metus mi quis leo. Curabitur eu malesuada lectus,
-                        non tempor mi. Vestibulum sodales felis augue, vitae
-                        lacinia libero accumsan a. Sed eleifend dui et libero
-                        elementum aliquam.
+                    If you are interested in Clojure, Lisp and functional programming come and join us ! We meet every month to learn and share knowledge and experience.
                     </p>
                 </div>
             </div>
