--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: landing
 <code><span class="lightBlue">(</span><span class="blue">def</span> meetup
      <span class="purple">{</span><span class="lightPurple">:date</span> <span class="lightGreen">“june 29 2016”</span>
       <span class="lightPurple">:location</span> <span class="lightGreen">“41, rue Meslay - 75003”</span>
-      <span class="lightPurple">:organizers</span> <span class="lightGreen">“Hiram Madeleine”</span>
+      <span class="lightPurple">:organizers</span> <span class="lightGreen">“Hiram Madelaine”</span>
                   <span class="lightGreen">“Jérémie Grodziski”</span><span class="purple">}</span><span class="lightBlue">)</span></code>
             </pre>
             <div class="container clearfix">
@@ -72,12 +72,12 @@ layout: landing
                     <div class="big-text-space"></div>
                     <h2>Organisateurs</h2>
                     <div class="team-container clearfix">
-                        <div class="name">Hiram Madeleine</div>
+                        <div class="name">Hiram Madelaine</div>
                         <div class="mail">
                             <a href="mailto:hiram.madelaine@gmail.com">hiram.madelaine@gmail.com</a>
                         </div>
                         <div class="twitter">
-                            <a target="_blank" href="https://twitter.com/hirammadelaine">@hirammadeleine</a>
+                            <a target="_blank" href="https://twitter.com/hirammadelaine">@HiramMadelaine</a>
                         </div>
                     </div>
                     <div class="team-container">
