blog section now restyled - few things yet to improve like search and tags

--- a/index.html
+++ b/index.html
@@ -96,3 +96,6 @@ layout: landing
                 </div>
             </div>
         </section>
+        <div class="divider small">
+            <img class="rellax" data-rellax-speed="8" src="/img/divide.svg"/>
+        </div>
