added the search js -- works but still bugs on blur box stays here

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ layout: landing
                     <div class="big-text-space"></div>
                     <h2>Organisateurs</h2>
                     <div class="team-container clearfix">
+                        <div class="avatar">
+                            <img src="/img/hiram.png"/>
+                        </div>
                         <div class="name">Hiram Madelaine</div>
                         <div class="mail">
                             <a href="mailto:hiram.madelaine@gmail.com">hiram.madelaine@gmail.com</a>
