minor fix + add next meetup with Romeu

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ layout: landing
             <div class="cover-rellax-scene">
                 <img class="rellax cover-bracket-purple" data-rellax-speed="-2" src="/img/bracket-purple.svg"/>
                 <img class="rellax cover-parenthese-blue" data-rellax-speed="-3" src="/img/parenthese-blue.svg"/>
-                <img class="rellax cover-hexagone-green" data-rellax-speed="2" src="/img/hexagone-green.svg"/>
-                <img class="rellax cover-hexagone-lightblue" data-rellax-speed="-6" src="/img/hexagone-lightblue.svg"/>
+                <!--<img class="rellax cover-hexagone-green" data-rellax-speed="2" src="/img/hexagone-green.svg"/>
+                <img class="rellax cover-hexagone-lightblue" data-rellax-speed="-6" src="/img/hexagone-lightblue.svg"/>-->
                 <img class="rellax cover-parenthese-green" data-rellax-speed="6" src="/img/parenthese-green.svg"/>
                 <img class="rellax cover-colon-purple" data-rellax-speed="10" src="/img/colon-purple.svg"/>
-                <img class="rellax cover-circle-darkblue" data-rellax-speed="10" src="/img/circle-darkblue.svg"/>
+                <!--<img class="rellax cover-circle-darkblue" data-rellax-speed="10" src="/img/circle-darkblue.svg"/>-->
             </div>
             <div id="parallax-scene" class="parallax-container">
                 <img class="layer" data-depth="0.75" src="/img/cover-back.svg"/>
@@ -24,8 +24,8 @@ layout: landing
         <!-- Presentation Section -->
         <section id="presentation" class="presentation clearfix">
             <div class="presentation-rellax-scene">
-                <img class="rellax pres-quote-purple" data-rellax-speed="6" src="/img/quote-purple.svg"/>
-                <img class="rellax pres-hexagone-lightpurple" data-rellax-speed="2" src="/img/hexagone-light-purple.svg"/>
+                <!--<img class="rellax pres-quote-purple" data-rellax-speed="6" src="/img/quote-purple.svg"/>
+                <img class="rellax pres-hexagone-lightpurple" data-rellax-speed="2" src="/img/hexagone-light-purple.svg"/>-->
                 <img class="rellax pres-colon-lightgreen" data-rellax-speed="-4" src="/img/colon-lightgreen.svg"/>
                 <img class="rellax pres-bracket-lightblue" data-rellax-speed="10" src="/img/bracket-lightblue.svg"/>
             </div>
@@ -48,18 +48,22 @@ layout: landing
             <div class="line-wrapper clearfix">
                 <div class="container">
                     <div class="big-text-space"></div>
-                    <h2>Meetups à venir</h2>
+                    <h1>Prochain Meetup</h1>
                 </div>
             </div>
             <pre>
-<code><span class="lightBlue">(</span><span class="blue">def</span> meetup
-     <span class="purple">{</span><span class="lightPurple">:date</span> <span class="lightGreen">“june 29 2016”</span>
-      <span class="lightPurple">:location</span> <span class="lightGreen">“41, rue Meslay - 75003”</span>
-      <span class="lightPurple">:organizers</span> <span class="lightGreen">“Hiram Madelaine”</span>
-                  <span class="lightGreen">“Jérémie Grodziski”</span><span class="purple">}</span><span class="lightBlue">)</span></code>
+                <code>
+    <span class="lightBlue">(</span><span class="blue">def</span> meetup
+        <span class="purple">{</span><span class="lightPurple">:date</span> <span class="lightGreen">“july 29th 2016”</span>
+        <span class="lightPurple">:location</span> <span class="lightGreen">“Arolla - 25 rue du Louvre Paris 1er”</span>
+        <span class="lightPurple">:speaker</span> <span class="lightGreen">“<a href="https://twitter.com/malk_zameth" style="color: #63ddce">Romeu Moura</a>”</span>
+        <span class="lightPurple">:subject</span> <span class="lightGreen">“Property-based Testing with clojure.spec”</span>
+        <span class="lightPurple">:organizers</span> <span class="lightGreen">“Hiram Madelaine”</span>
+                    <span class="lightGreen">“Jérémie Grodziski”</span><span class="purple">}</span><span class="lightBlue">)</span>
+                </code>
             </pre>
             <div class="container clearfix">
-                <a class="meetup-link" href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/">voir sur meetup</a>
+                <a class="meetup-link" href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/">S'inscrire sur meetup.com</a>
                 <div class="big-text-space"></div>
             </div>
         </section>
@@ -70,7 +74,7 @@ layout: landing
             <div class="line-wrapper clearfix">
                 <div class="container space-after clearfix">
                     <div class="big-text-space"></div>
-                    <h2>Organisateurs</h2>
+                    <h1>Organisateurs</h1>
                     <div class="team-container clearfix">
                         <div class="avatar">
                             <img src="/img/hiram.png"/>
