fix h1 title and add link to the next meetup in the landing page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ layout: landing
                 </code>
             </pre>
             <div class="container clearfix">
-                <a class="meetup-link" href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/">S'inscrire sur meetup.com</a>
+                <a class="meetup-link" href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/events/232640647/?eventId=232640647">S'inscrire sur meetup.com</a>
                 <div class="big-text-space"></div>
             </div>
         </section>
