layout and text fixes

--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@ layout: landing
             </div>
             <div class="line-wrapper clearfix">
                 <div class="container">
-                    <!--<h1>Paris Clojure Meetup</h1>
-                    <div class="text-space"></div>-->
+                    <h1>The Clojure community in Paris</h1>
+                    <div class="text-space"></div>
                     <p>
                     If you are interested in Clojure, Lisp and functional programming come and join us! We meet every month to learn and share knowledge and experience.
                     </p>
+                    <div class="big-text-space"></div>
+                    <div class="presentation-links">
+                        <a href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/">join us on meetup</a>
+                        <a href="https://twitter.com/clojureparis">follow us on twitter</a>
+                    </div>
+                    <div class="clearfix"></div>
                 </div>
             </div>
         </section>
@@ -48,22 +54,22 @@ layout: landing
             <div class="line-wrapper clearfix">
                 <div class="container">
                     <div class="big-text-space"></div>
-                    <h1 itemprop="name">Prochain Clojure Paris Meetup</h1>
+                    <h1 itemprop="name">Next Paris Clojure Meetup</h1>
                 </div>
             </div>
             <pre>
-                <code>
-    <span class="lightBlue">(</span><span class="blue">def</span> meetup
-        <span class="purple">{</span><span class="lightPurple">:date</span> <span class="lightGreen" itemprop="startDate" itemtype="http://schema.org/Date" >“july 29th 2016”</span>
-         <span class="lightPurple">:location</span> <span class="lightGreen" itemprop="location" itemscope itemtype="http://schema.org/Place">“Arolla - 25 rue du Louvre Paris 1er”</span>
-         <span class="lightPurple">:speaker</span> <span class="lightGreen" itemprop="performer" itemtype="http://schema.org/Person">“<a href="https://twitter.com/malk_zameth" style="color: #63ddce">Romeu Moura</a>”</span>
-         <span class="lightPurple">:subject</span> <span class="lightGreen" itemprop="description">“Property-based Testing with clojure.spec”</span>
-         <span class="lightPurple">:organizers</span> <span class="lightGreen" itemprop="organizer" itemtype="http://schema.org/Person">“Hiram Madelaine”</span>
-                    <span class="lightGreen" itemprop="organizer" itemtype="http://schema.org/Person">“Jérémie Grodziski”</span><span class="purple">}</span><span class="lightBlue">)</span>
-                </code>
+            <code>
+<span class="lightBlue">(</span><span class="blue">def</span> meetup
+    <span class="purple">{</span><span class="lightPurple">:date</span> <span class="lightGreen" itemprop="startDate" itemtype="http://schema.org/Date" >“july 29th 2016”</span>
+     <span class="lightPurple">:location</span> <span class="lightGreen" itemprop="location" itemscope itemtype="http://schema.org/Place">“Arolla - 25 rue du Louvre Paris 1er”</span>
+     <span class="lightPurple">:speaker</span> <span class="lightGreen" itemprop="performer" itemtype="http://schema.org/Person">“<a href="https://twitter.com/malk_zameth" style="color: #63ddce">Romeu Moura</a>”</span>
+     <span class="lightPurple">:subject</span> <span class="lightGreen" itemprop="description">“Property-based Testing with clojure.spec”</span>
+     <span class="lightPurple">:organizers</span> <span class="lightGreen" itemprop="organizer" itemtype="http://schema.org/Person">“Hiram Madelaine”</span>
+                 <span class="lightGreen" itemprop="organizer" itemtype="http://schema.org/Person">“Jérémie Grodziski”</span><span class="purple">}</span><span class="lightBlue">)</span>
+            </code>
             </pre>
             <div class="container clearfix">
-                <a class="meetup-link" href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/events/232640647/?eventId=232640647">S'inscrire sur meetup.com</a>
+                <a class="meetup-link" href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/events/232640647/?eventId=232640647">Join on meetup.com</a>
                 <div class="big-text-space"></div>
             </div>
         </section>
@@ -74,7 +80,7 @@ layout: landing
             <div class="line-wrapper clearfix">
                 <div class="container space-after clearfix">
                     <div class="big-text-space"></div>
-                    <h1>Organisateurs</h1>
+                    <h1>Organizers</h1>
                     <div class="team-container clearfix">
                         <div class="avatar">
                             <img src="/img/hiram.png"/>
