add next meetup

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@ layout: landing
             <pre>
             <code>
 <span class="lightBlue">(</span><span class="blue">def</span> meetup
-    <span class="purple">{</span><span class="lightPurple">:date</span> <span class="lightGreen" itemprop="startDate" itemtype="http://schema.org/Date" >“july 29th 2016”</span>
-     <span class="lightPurple">:location</span> <span class="lightGreen" itemprop="location" itemscope itemtype="http://schema.org/Place">“Arolla - 25 rue du Louvre Paris 1er”</span>
-     <span class="lightPurple">:speaker</span> <span class="lightGreen" itemprop="performer" itemtype="http://schema.org/Person">“<a href="https://twitter.com/malk_zameth" style="color: #63ddce">Romeu Moura</a>”</span>
-     <span class="lightPurple">:subject</span> <span class="lightGreen" itemprop="description">“Property-based Testing with clojure.spec”</span>
+    <span class="purple">{</span><span class="lightPurple">:date</span> <span class="lightGreen" itemprop="startDate" itemtype="http://schema.org/Date" >“April 11th 2017”</span>
+     <span class="lightPurple">:location</span> <span class="lightGreen" itemprop="location" itemscope itemtype="http://schema.org/Place">“Oscaro - 6 boulevard Hausmann Paris 9eme”</span>
+     <span class="lightPurple">:speaker</span> <span class="lightGreen" itemprop="performer" itemtype="http://schema.org/Person">“Various Speaker”</span>
+     <span class="lightPurple">:subject</span> <span class="lightGreen" itemprop="description">“Clojure(Script) and the Front End, A Love Story!”</span>
      <span class="lightPurple">:organizers</span> <span class="lightGreen" itemprop="organizer" itemtype="http://schema.org/Person">“Hiram Madelaine”</span>
                  <span class="lightGreen" itemprop="organizer" itemtype="http://schema.org/Person">“Jérémie Grodziski”</span><span class="purple">}</span><span class="lightBlue">)</span>
             </code>
             </pre>
             <div class="container clearfix">
-                <a class="meetup-link" href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/events/232640647/?eventId=232640647">Join on meetup.com</a>
+                <a class="meetup-link" href="https://www.meetup.com/fr-FR/Paris-Clojure-User-Group/events/238743198/">Join on meetup.com</a>
                 <div class="big-text-space"></div>
             </div>
         </section>
